Agregar tooltips a los logos de habilidades en el componente Skills

--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -33,13 +33,34 @@
                 <div class="card-body text-center">
                     <b>Frontend</b>
                     <div class="logos d-flex flex-wrap justify-content-center gap-3 mt-3">
-                        <img src="assets/img/svg/html.svg" alt="HTML logo" class="img-fluid logo-icon" />
-                        <img src="assets/img/svg/css.svg" alt="CSS logo" class="img-fluid logo-icon" />
-                        <img src="assets/img/svg/javascript.svg" alt="Javascript logo" class="img-fluid logo-icon" />
-                        <img src="assets/img/svg/bootstrap.svg" alt="Bootstrap logo" class="img-fluid logo-icon" />
-                        <img src="assets/img/svg/react.svg" alt="React logo" class="img-fluid logo-icon" />
-                        <img src="assets/img/svg/angular.svg" alt="Angular logo" class="img-fluid logo-icon" />
-                        <img src="assets/img/png/logo/typescript.png" alt="Typescript logo" class="img-fluid logo-icon" />
+                        <div class="skill-item">
+                            <img src="assets/img/svg/html.svg" alt="HTML logo" class="img-fluid logo-icon" />
+                            <span class="tooltip">HTML</span>
+                        </div>
+                        <div class="skill-item">
+                            <img src="assets/img/svg/css.svg" alt="CSS logo" class="img-fluid logo-icon" />
+                            <span class="tooltip">CSS</span>
+                        </div>
+                        <div class="skill-item">
+                            <img src="assets/img/svg/javascript.svg" alt="Javascript logo" class="img-fluid logo-icon" />
+                            <span class="tooltip">JavaScript</span>
+                        </div>
+                        <div class="skill-item">
+                            <img src="assets/img/svg/bootstrap.svg" alt="Bootstrap logo" class="img-fluid logo-icon" />
+                            <span class="tooltip">Bootstrap</span>
+                        </div>
+                        <div class="skill-item">
+                            <img src="assets/img/svg/react.svg" alt="React logo" class="img-fluid logo-icon" />
+                            <span class="tooltip">React</span>
+                        </div>
+                        <div class="skill-item">
+                            <img src="assets/img/svg/angular.svg" alt="Angular logo" class="img-fluid logo-icon" />
+                            <span class="tooltip">Angular</span>
+                        </div>
+                        <div class="skill-item">
+                            <img src="assets/img/png/logo/typescript.png" alt="Typescript logo" class="img-fluid logo-icon" />
+                            <span class="tooltip">TypeScript</span>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -51,12 +72,30 @@
                 <div class="card-body text-center">
                     <b>Backend</b>
                     <div class="logos d-flex flex-wrap justify-content-center gap-3 mt-3">
-                        <img src="assets/img/svg/python.svg" alt="Python logo" class="img-fluid logo-icon" />
-                        <img src="assets/img/svg/django.svg" alt="Django logo" class="img-fluid logo-icon" />
-                        <img src="assets/img/svg/java.svg" alt="Java logo" class="img-fluid logo-icon" />
-                        <img src="assets/img/svg/mysql.svg" alt="MySQL logo" class="img-fluid logo-icon" />
-                        <img src="assets/img/png/logo/php.png" alt="PHP logo" class="img-fluid logo-icon" />
-                        <img src="assets/img/png/logo/Symfony.png" alt="Symfony logo" class="img-fluid logo-icon" />
+                        <div class="skill-item">
+                            <img src="assets/img/svg/python.svg" alt="Python logo" class="img-fluid logo-icon" />
+                            <span class="tooltip">Python</span>
+                        </div>
+                        <div class="skill-item">
+                            <img src="assets/img/svg/django.svg" alt="Django logo" class="img-fluid logo-icon" />
+                            <span class="tooltip">Django</span>
+                        </div>
+                        <div class="skill-item">
+                            <img src="assets/img/svg/java.svg" alt="Java logo" class="img-fluid logo-icon" />
+                            <span class="tooltip">Java</span>
+                        </div>
+                        <div class="skill-item">
+                            <img src="assets/img/svg/mysql.svg" alt="MySQL logo" class="img-fluid logo-icon" />
+                            <span class="tooltip">MySQL</span>
+                        </div>
+                        <div class="skill-item">
+                            <img src="assets/img/png/logo/php.png" alt="PHP logo" class="img-fluid logo-icon" />
+                            <span class="tooltip">PHP</span>
+                        </div>
+                        <div class="skill-item">
+                            <img src="assets/img/png/logo/Symfony.png" alt="Symfony logo" class="img-fluid logo-icon" />
+                            <span class="tooltip">Symfony</span>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -66,15 +105,30 @@
     <div class="row justify-content-center">
         <!-- DevOps Card -->
         <div class="col-12 col-md-6 mb-4">
-            <div class="card shadow-sm">
+            <div class="card card-with-title shadow-sm">
                 <div class="card-body text-center">
                     <b>DevOps</b>
                     <div class="logos d-flex flex-wrap justify-content-center gap-3 mt-3">
-                        <img src="assets/img/svg/aws.svg" alt="AWS logo" class="img-fluid logo-icon" />
-                        <img src="assets/img/svg/github.svg" alt="GitHub logo" class="img-fluid logo-icon" />
-                        <img src="assets/img/png/logo/docker.png" alt="Docker logo" class="img-fluid logo-icon" />
-                        <img src="assets/img/png/logo/git.png" alt="Git logo" class="img-fluid logo-icon" />
-                        <img src="assets/img/png/logo/vercel.png" alt="Vercel logo" class="img-fluid logo-icon" />
+                        <div class="skill-item">
+                            <img src="assets/img/svg/aws.svg" alt="AWS logo" class="img-fluid logo-icon" />
+                            <span class="tooltip">AWS</span>
+                        </div>
+                        <div class="skill-item">
+                            <img src="assets/img/svg/github.svg" alt="GitHub logo" class="img-fluid logo-icon" />
+                            <span class="tooltip">GitHub</span>
+                        </div>
+                        <div class="skill-item">
+                            <img src="assets/img/png/logo/docker.png" alt="Docker logo" class="img-fluid logo-icon" />
+                            <span class="tooltip">Docker</span>
+                        </div>
+                        <div class="skill-item">
+                            <img src="assets/img/png/logo/git.png" alt="Git logo" class="img-fluid logo-icon" />
+                            <span class="tooltip">Git</span>
+                        </div>
+                        <div class="skill-item">
+                            <img src="assets/img/png/logo/vercel.png" alt="Vercel logo" class="img-fluid logo-icon" />
+                            <span class="tooltip">Vercel</span>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -82,14 +136,23 @@
 
         <!-- Tools Card -->
         <div class="col-12 col-md-6 mb-4">
-            <div class="card shadow-sm">
+            <div class="card card-with-title shadow-sm">
                 <div class="card-body text-center">
-                    <b>Tools</b>
-                        <div class="logos d-flex flex-wrap justify-content-center gap-3 mt-3">
+                    <b>DevOps</b>
+                    <div class="logos d-flex flex-wrap justify-content-center gap-3 mt-3">
+                        <div class="skill-item">
                             <img src="assets/img/png/logo/visualstudiocode.png" alt="Visual Studio Code logo" class="img-fluid logo-icon" />
-                            <img src="assets/img/png/logo/eclipse.png" alt="Eclipse IDE logo" class="img-fluid logo-icon" />
-                            <img src="assets/img/png/logo/firebase.png" alt="Firebase logo" class="img-fluid logo-icon" />
+                            <span class="tooltip">Visual Studio Code</span>
                         </div>
+                        <div class="skill-item">
+                            <img src="assets/img/png/logo/eclipse.png" alt="Eclipse IDE logo" class="img-fluid logo-icon" />
+                            <span class="tooltip">Eclipse IDE</span>
+                        </div>
+                        <div class="skill-item">
+                            <img src="assets/img/png/logo/firebase.png" alt="Firebase logo" class="img-fluid logo-icon" />
+                            <span class="tooltip">Firebase</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
